--- a/public/locales/uk/dicePost.json
+++ b/public/locales/uk/dicePost.json
@@ -1,3 +1,4 @@
 {
-  "dicePost":"За допомогою простого поля введення ви можете встановити максимальне значення 999 - і вам не знадобиться мішечок для кубиків!"
+  "details1":"За допомогою простого поля введення ви можете встановити максимальне значення 999 - і вам не знадобиться мішечок для кубиків!",
+  "details2":"Протестовано на власному Pixel 3A та різних емульованих пристроях в Android Studio, включно з планшетами!"
 }
