--- a/public/locales/uk/dicePost.json
+++ b/public/locales/uk/dicePost.json
@@ -1,4 +1,4 @@
 {
-  "details1":"За допомогою простого поля введення ви можете встановити максимальне значення 999 - і вам не знадобиться мішечок для кубиків!",
-  "details2":"Протестовано на власному Pixel 3A та різних емульованих пристроях в Android Studio, включно з планшетами!"
+  "details1":"Ви можете встановити максимальне значення 999 - і вам не знадобиться мішечок для кубиків!",
+  "details2":"Протестовано на власному Pixel 3A та на эмуляторі в Android Studio, включно з планшетами!"
 }
